added "Geographic locations settings" back

--- a/MEInsight.Web/Areas/Settings/Views/Home/Index.cshtml
+++ b/MEInsight.Web/Areas/Settings/Views/Home/Index.cshtml
@@ -49,6 +49,20 @@
 
         </div>
     </div>
+
+    <div class="col d-flex align-items-start p-2">
+        <div class="icon-square text-primary flex-shrink-0 me-3">
+            <i class="fa-solid fa-map-location fa-2xl"></i>
+        </div>
+        <div>
+            <h4 class="text-primary">
+                Geographic Locations Setttings
+            </h4>
+            <p>Locations  <a class='' asp-action='Index' asp-controller='Locations' asp-area='Settings'><i class="fa-solid fa-up-right-from-square"></i></a></p>
+            <p>Location Types  <a class='' asp-action='Index' asp-controller='LocationTypes' asp-area='Settings'><i class="fa-solid fa-up-right-from-square"></i></a></p>
+
+        </div>
+    </div>
     <div class="col d-flex align-items-start p-2">
         <div class="icon-square  text-primary flex-shrink-0 me-3">
             <i class="fa-solid fa-users-gear fa-2xl"></i>
