--- a/MEInsight.Web/Views/GroupEnrollments/Index.cshtml
+++ b/MEInsight.Web/Views/GroupEnrollments/Index.cshtml
@@ -83,10 +83,9 @@
         <div class="col-sm-12 col-md-6 d-flex align-items-center justify-content-end">
             <!--datatable search start-->
             <div class="input-group input-group-sm d-print-none mb-2">
-                <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-search" aria-hidden="true"></i></span>
-                </div>
+                <span class="input-group-text"><i class="fa fa-search" aria-hidden="true"></i></span>
                 <input id="searchbox" type="text" class="form-control" placeholder='@Localizer["Search"]' aria-describedby="searchbox">
+                <button id="search-button" class="btn btn-sm btn-secondary" type="button">@Localizer["Search"]</button>
             </div>
             <!--datatable search end-->
         </div>
@@ -111,91 +110,33 @@
             <table id="datatable" class="table table-sm table-hover table-striped responsive no-wrap w-100">
                 <thead>
                     <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Participants.Name)
+                        <th data-data="name" data-name="Name" data-responsivePriority="1">
+                            @Localizer["Name"]
                         </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Participants.ParticipantCode)
+                        <th data-data="participantCode" data-name="ParticipantCode">
+                            @Localizer["Participant Code"]
                         </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Participants.Sex)
+                        <th data-data="sex" data-name="Sex">
+                            @Localizer["Sex"]
                         </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Attendance)
+                        <th data-data="attendance" data-name="Attendance">
+                            @Localizer["Attendance"]
                         </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.EnrollmentStatus)
+                        <th data-data="enrollmentStatus" data-name="EnrollmentStatus">
+                            @Localizer["Enrollment Status"]
                         </th>
-                        <th class="text-end d-print-none">@Localizer["Actions"]</th>
+                        <th data-orderable="false" class="text-end d-print-none">@Localizer["Actions"]</th>
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td class="text-uppercase fw-bold">
-                                @Html.DisplayFor(modelItem => item.Participants.Name)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Participants.ParticipantCode)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Participants.Sex!.SexId)
-                            </td>
-                            <td>
-                                @if (item.Attendance != null)
-                                {
-                                    @Html.DisplayFor(modelItem => item.Attendance)
-
-                                    <span> @ViewBag.ProgramAttendanceUnit</span>
-                                }
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.EnrollmentStatus!.EnrollmentStatus)
-                            </td>
-                            <td class="text-end d-print-none">
-                                <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
-                                    <a asp-action="Details" asp-route-id="@item.GroupEnrollmentId"
-                                   class="btn btn-link text-gray btn-sm d-print-none btn-action"
-                                   data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title='@Localizer["Details"]'>
-                                        <i class="fas fa-info-circle fa-sm" aria-hidden="true"></i>
-                                    </a>
-
-                                    @if (ViewBag.Closed != true)
-                                    {
-                                        <a policy="RequireEditRole" asp-action="Edit" asp-route-id="@item.GroupEnrollmentId"
-                                   class="btn btn-link text-gray btn-sm d-print-none btn-action"
-                                   data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title='@Localizer["Edit"]'>
-                                            <i class="fas fa-pencil-alt fa-sm" aria-hidden="true"></i>
-                                        </a>
-
-                                        <a policy="RequireEditRole" asp-controller="Participants" asp-action="Edit" asp-route-id="@item.ParticipantId" asp-route-GroupId="@item.GroupId"
-                                   class="btn btn-link text-gray btn-sm d-print-none btn-action"
-                                   data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title='@Localizer["Edit"]'>
-                                            <i class="fas fa-user-edit fa-sm" aria-hidden="true"></i>
-                                        </a>
-
-                                        <a policy="RequireDeleteRole" asp-action="Delete" asp-route-id="@item.GroupEnrollmentId"
-                                   class="btn btn-link text-gray btn-sm d-print-none btn-action"
-                                   data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title='@Localizer["Delete"]'>
-                                            <i class="far fa-trash-alt fa-sm" aria-hidden="true"></i>
-                                        </a>
-                                    }
-
-                                    @if (ViewBag.NextController != null)
-                                    {
-                                        <a asp-controller="@ViewBag.NextController"
-                                   asp-action="Index"
-                                   asp-route-id="@item.GroupEnrollmentId"
-                                   class="btn btn-link btn-sm d-print-none btn-action"
-                                   data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title='@Localizer["Open"]'>
-                                            <i class="fas fa-chevron-right fa-sm" aria-hidden="true"></i>
-                                        </a>
-                                    }
-                                </div>
-                            </td>
-                        </tr>
-                    }
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
                 </tbody>
             </table>
             <!--table end-->
@@ -229,11 +170,226 @@
     @{
     <script src="~/lib/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js" asp-append-version="true"></script>
     <script src="~/lib/sweetalert2/dist/sweetalert2.all.min.js" asp-append-version="true"></script>
-        await Html.RenderPartialAsync("_ListScriptsPartial");
+        await Html.RenderPartialAsync("_ServerListScriptsPartial");
     }
 
     <script>
         $(document).ready(function() {
+            // Use Datatables.net Internationalization i18n
+            function getDataTablesLanguage() {
+                var cultureInfo = '@System.Globalization.CultureInfo.CurrentCulture.TwoLetterISOLanguageName';
+                if (cultureInfo) {
+                    var path = '/lib/datatables/i18n/' + cultureInfo + '.json';
+                }
+                return path;
+            }
+
+            var dataTableOptions = {
+                ajax: {
+                    url: "/api/GroupEnrollments/Paginated",
+                    type: "POST",
+                    datatype: "json",
+                    contentType: "application/x-www-form-urlencoded",
+                    data:
+                        function(d) {
+                            d.id = "@ViewBag.ParentId";
+                        },
+                    type: "POST",
+                    datatype: "json"
+                },
+                // Initial order (sort) to apply to the table
+                order: [],
+                // Allows changing the paging display length of the table
+                lengthChange: true,
+                lengthMenu: [[10, 25, 50, -1], [10, 25, 50, "All"]],
+                // Enables the display of a 'processing' indicator when the table is being processed (e.g. a sort).
+                processing: true,
+                // Server side processing
+                serverSide: true,
+                filter: true,
+                orderMulti: false,
+
+                // ?
+                searchHighlight: true,
+                // Highlight the columns being ordered in the table's body
+                orderClasses: false,
+                // Pagination button display options
+                pagingType: "full_numbers",
+                // Change the initial page length (number of rows per page)
+                pageLength: 25,
+                dom:
+                    "<'row'"
+                    + "<'col-sm-12 col-md-6 justify-content-start'>" // f
+                    + "<'col-sm-12 col-md-6 justify-content-end'>" // B
+                    + ">"
+                    + "<'row'<'col-sm-12 d-flex align-items-center'tr>>"
+                    + "<'row'"
+                    + "<'col-sm-12 col-md-6 col-form-label 'l>"
+                    + "<'col-sm-12 col-md-6 justify-content-end'p>"
+                    + ">"
+                    + "<'row'<'col-sm-12'i>"
+                    + ">"
+                ,
+                responsive: true,
+                autoWidth: true,
+                columnDefs: [
+                    {
+                        targets:[0],
+                        className: 'text-bold'
+                    },
+                    {
+                        targets: [-1],
+                        data: null,
+                        width: '70px',
+                        className: 'text-end',
+                        render: function(data, type, row, meta) {
+                            var action = '<div class="btn-group btn-group-sm" role="group" aria-label="Actions">';
+                            action += '<td>';
+                            action += '<a href="/GroupEnrollments/Details/' + row.groupEnrollmentId + '" class="btn btn-link text-gray btn-sm d-print-none btn-action" data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title="@Localizer["Details"]"><i class="fas fa-info-circle fa-sm" aria-hidden="true"></i></a>';
+                            @if (ViewBag.Closed != true)
+                            {
+                                @if (AuthorizationService.AuthorizeAsync(User, "RequireEditRole").GetAwaiter().GetResult().Succeeded)
+                                {
+                                    @:action += '<a href="/GroupEnrollments/Edit/' + row.groupEnrollmentId + '" class="btn btn-link text-gray btn-sm d-print-none btn-action" data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title="@Localizer["Edit"]"><i class="fas fa-pencil-alt fa-sm" aria-hidden="true"></i></a>';
+                                }
+
+                                @if (AuthorizationService.AuthorizeAsync(User, "RequireEditRole").GetAwaiter().GetResult().Succeeded)
+                                {
+                                    @:action += '<a href="/Participants/Edit/' + row.participantId + '?GroupId=' + row.groupId + '" class="btn btn-link text-gray btn-sm d-print-none btn-action" data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title="@Localizer["Edit"]"><i class="fas fa-user-edit fa-sm" aria-hidden="true"></i></a>';
+                                }
+
+                                @if (AuthorizationService.AuthorizeAsync(User, "RequireDeleteRole").GetAwaiter().GetResult().Succeeded)
+                                {
+                                    @:action += '<a href="/GroupEnrollments/Delete/' + row.groupEnrollmentId + '" class="btn btn-link text-gray btn-sm d-print-none btn-action" data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title="@Localizer["Delete"]"><i class="far fa-trash-alt fa-sm" aria-hidden="true"></i></a>';
+                                }
+
+                            }
+                            
+                            action += '</td>';
+                            action += '</div>';
+                            return action;
+                        }
+                    }],
+                buttons: {
+                    dom: {
+                        button: {
+                            className: 'btn btn-secondary btn-sm mb-2'
+                        }
+                    },
+                    buttons: [
+                        {
+                            extend: 'copy',
+                        },
+                        {
+                            extend: 'excelHtml5',
+                            charset: 'UTF-16LE',
+                            bom: true,
+                            fieldSeparator: ',',
+                            fieldBoundary: '"',
+                            exportOptions: {
+                                columns: ':not(:last-child)'
+                            },
+                            filename: function() {
+                                var date = new Date();
+                                var year = date.getFullYear();
+                                var month = date.getMonth() + 1;
+                                var day = date.getDate();
+                                var hour = date.getHours();
+                                var minutes = date.getMinutes();
+                                var datepart = ((year * 100 + month + 1) * 100 + day) + "_" + (hour * 100 + minutes);
+                                return document.title + "_" + datepart;
+                            }
+                        },
+                        {
+                            extend: 'colvis',
+                        },
+                        {
+                            extend: 'print',
+                            title: '',
+                            autoPrint: true,
+                            exportOptions: {
+                                columns: ':not(:last-child)',
+                                stripHtml: true,
+                                stripNewlines: true
+                            },
+                            customize: function(win) {
+                                $(win.document.body)
+                                    .css({
+                                        'font-size': '10pt',
+                                        'padding-top': '0px'
+                                    });
+
+                                $(win.document.body).find('table')
+                                    .addClass('compact table-bordered')
+                                    .css('font-size', 'inherit');
+
+                                //TODO: assign id
+                                var heading = $('.heading-panel').html();
+                                //TODO: assign id
+                                var panel = $('.info-panel').html();
+
+                                // PREPEND PRINT
+                                if (panel) {
+                                    $(win.document.body).prepend(
+                                        heading
+                                        + '<br>' +
+                                        panel
+                                    );
+                                }
+                                else {
+                                    $(win.document.body).prepend(
+                                        heading
+                                    );
+                                }
+
+                                // APPEND PRINT
+                                $(win.document.body).append(
+                                    $('.dataTables_info').text()
+                                    + '<br>'
+                                    + '@User?.Identity?.Name - @DateTime.Now.ToShortDateString()'
+                                );
+                            }
+                        }
+
+                    ]
+                },
+                language: {
+                    url: getDataTablesLanguage()
+                },
+                initComplete: function(settings, json) {
+                    // init buttons
+                    table.buttons(0, null)
+                        .container().appendTo('#toolbar');
+                }
+            }
+
+            //DATATABLE INIT AND OPTIONS
+            $.fn.dataTable.ext.classes.sPageButton = 'page-item btn-light'; // Change Pagination Button Class
+            $.fn.DataTable.ext.pager.numbers_length = 5;
+            $.fn.dataTable.ext.classes.sPaging = 'dataTables_paginate paging_ pagination-sm flex-wrap mt-2 mt-sm-auto';
+
+            var table = $('#datatable').DataTable(dataTableOptions);
+
+
+            // filter table
+            $("#search-button").on('click', function() {
+                var searchString = $('#searchbox').val();
+                table.search(searchString).draw();
+            });
+
+            //TOOLTIP INIT
+            $('[data-bs-toggle="tooltip"]').tooltip({
+                animation: true,
+                delay: { "show": 700, "hide": 100 },
+                trigger: 'hover'
+            });
+
+            $('.buttons-html5').tooltip({
+                animation: false,
+                delay: { "show": 700, "hide": 100 },
+                trigger: 'hover'
+            });
+
             $('#btn-close').on('click', function() {
                 Swal.fire({
                     title: '@Localizer["Complete Enrollment"]',
